Release ...
* troff/dpost: Preliminary support for CFF-based OpenType fonts has been
  added.
* dpost: Can now access all characters in a large PostScript font, not only
  the first 255.
* dpost: If the data in a PFB file to be included does not end with a
  newline character, add one to the generated PostScript to achieve a
  consistent DSC structure (Bugreport by Sebastian Leusch).
* dpost: The limit of characters with "x X" commands has been raised from
  50 to 4096. This in particular allows to supply fonts with long path
  names.
* The "-mcolor" macros have been added from Plan 9 sources.

Release 050920
* troff: The handling of locale-dependent characters in copy mode has been
  fixed. Previously when such a character was given e.g. in an argument to
  a macro, it was chosen from the font in effect at the time when the macro
  call was read, instead of the one in effect at the time when the macro
  was executed.
* troff: The lookup of kerning pairs from the predefined tables has been
  fixed. It previously located inappropriate pairs in some cases.
* troff: Is now more resistent against invalid AFM files whose character
  count following the "StartCharMetrics" keyword is too large. Previously,
  no characters outside the default troff character set were accessible
  with such files.
* dpost: When an AFM-based font was mounted more than once in troff,
  localized input characters are now printed properly in all positions.
  Previously, localized characters were only printed properly on the
  position that was used first in the document.
* troff: Several requests for handling fonts did not recognize font names
  with more than two characters correctly with the "-x" option; they have
  been fixed.
* troff: The characters "\(aa", "\(ga", """, "\-", "<", ">", "@", "\", "^",
  and "~" are now always chosen from the Times Roman special font with
  AFM-based devices too, as it has been the case with other devices. To get